--- a/deploy/Soucefiles/config.properties
+++ b/deploy/Soucefiles/config.properties
@@ -1,15 +1,200 @@
 #配置文件
+
 #ftp配置
-ftp_ip=127.0.0.1
-ftp_user=tulip
-ftp_password=switch1234
-ftp_port=21
-ftp_localpath=D:/ftp
-ftp_remotepath=../ftp
+[ftp_ip]
+10.52.3.199
+[ftp_user]
+tulip
+[ftp_password]
+switch1234
+[ftp_port]
+21
+[ftp_localpath]
+D:/ftp
+[ftp_remotepath]
+../ftp
 #log
 
+[SWITCH_UPLOADPATH]
+/home/tulip/tmp
+
+[SWITCH_DOWNLOADPATH]
+/home/tulip/mianyang/Gas/download
+
+#三方ftp IP
+[THIRD_IP]
+110.186.74.48
+#三方端口
+[THIRD_PORT]
+8015
+[THIRD_FTP_PORT]
+7721
+[THIRD_FTP_USER]
+abc
+[THIRD_FTP_PASSWORD]
+lxmo@86080
 #天然气加密
-DesPassword=mynykey1
-idCode=069a179248ef59a353ac29f983d693d6
-url=http://110.186.74.48:7001/qjyj/payinterface.do?method=findArrearsByUserCode&idCode=
+[DesPassword]
+mynykey1
+[idCode]
+069a179248ef59a353ac29f983d693d6
+[url]
+http://110.186.74.48:7001/qjyj/payinterface.do?method=findArrearsByUserCode&idCode=
+#通讯机名称
+[Switch_Name]
+绵阳燃气
+#tulip报文头 包长占用字节数
+[PackLen_Bytes]
+6
+#本地监听端口
+[port]
+9529
+#交易要素编辑器，默认不做修改。需要在通讯机上修改报文交易要素请编写类继承类DefaultEditor，并填写其类名
+[Editor]
+com.myabc.ElementEditor.myGasEditor
+#三方调用方式，默认为Socket，其它方式请实现ThirdCaller接口，并填写其类名
+[Caller]
+com.myabc.Third.HttpThirdCaller
+[test_qry]
+<test><xx>${xx}</xx><tt>${tt}</tt><TxCode>${TxCode}</TxCode></test>
+####################tulip报文设置区，若非EJF接口有变，请勿轻易改动
+#tulip请求查询报文格式
+[Tulip_Req_Qry]
+<EJF>
+	<Body>
+		<PaymentKey3>${Body.PaymentKey3}</PaymentKey3>
+		<PaymentKey2>${Body.PaymentKey2}</PaymentKey2>
+		<PaymentKey1>${Body.PaymentKey1}</PaymentKey1>
+		<PaymentNo>${Body.PaymentNo}</PaymentNo>
+	</Body>
+	<Head>
+		<TxOperator>${Head.TxOperator}</TxOperator>
+		<TxChannel>${Head.TxChannel}</TxChannel>
+		<TxOrgNo>${Head.TxOrgNo}</TxOrgNo>
+		<TxSerial>${Head.TxSerial}</TxSerial>
+		<TxAgentNo>${Head.TxAgentNo}</TxAgentNo>
+		<TxFrom>${Head.TxFrom}</TxFrom>
+		<TxTime>${Head.TxTime}</TxTime>
+		<TxDate>${Head.TxDate}</TxDate>
+		<TxCode>${Head.TxCode}</TxCode>
+	</Head>
+	<Verify>
+		<MD5>${Verify.MD5}</MD5>
+	</Verify>
+</EJF>
+#响应tulip查询报文格式
+[Tulip_Resp_Qry]
+<EJF>
+	<Head>
+		<ReSerial>${Head.ReSerial}</ReSerial>
+		<ReCode>${Head.ReCode}</ReCode>
+		<ReMess>${Head.ReMess}</ReMess>
+	</Head>
+	<Body>
+		<AgentNo>${Body.AgentNo}</AgentNo>
+		<AgentName>${Body.AgentName}</AgentName>
+		<CustomerNo>${Body.CustomerNo}</CustomerNo>
+		<CustomerName>${Body.CustomerName}</CustomerName>
+		<CustomerID>${Body.CustomerID}</CustomerID>
+		<CustomerPhone>${Body.CustomerPhone}</CustomerPhone>
+		<CustomerAddr>${Body.CustomerAddr}</CustomerAddr>
+		<BalanceAmt>${Body.BalanceAmt}</BalanceAmt>
+		<PaymentAmt>${Body.PaymentAmt}</PaymentAmt>
+		<PayStartDate>${Body.PayStartDate}</PayStartDate>
+		<PayEndDate>${Body.PayEndDate}</PayEndDate>
+		<ShowInfo>${Body.ShowInfo}</ShowInfo>
+		<PrintInfo>${Body.PrintInfo}</PrintInfo>
+		<Note>${Body.Note}</Note>
+		<InfoArea>${Body.InfoArea}</InfoArea>
+	</Body>
+</EJF>
+#tulip请求缴费报文格式
+[Tulip_Req_Pay]
+<EJF>
+	<Body>
+		<InfoArea>${Body.InfoArea}</InfoArea>
+		<Note>${Body.Note}</Note>
+		<PrintInfo>${Body.PrintInfo}</PrintInfo>
+		<ShowInfo>${Body.ShowInfo}</ShowInfo>
+		<BalanceAmt>${Body.BalanceAmt}</BalanceAmt>
+		<CustomerAddr>${Body.CustomerAddr}</CustomerAddr>
+		<CustomerPhone>${Body.CustomerPhone}</CustomerPhone>
+		<CustomerID>${Body.CustomerID}</CustomerID>
+		<CustomerName>${Body.CustomerName}</CustomerName>
+		<CustomerNo>${Body.CustomerNo}</CustomerNo>
+		<AgentName>${Body.AgentName}</AgentName>
+		<VchNo>${Body.VchNo}</VchNo>
+		<JrnNo>${Body.JrnNo}</JrnNo>
+		<PayEndDate>${Body.PayEndDate}</PayEndDate>
+		<PayStartDate>${Body.PayStartDate}</PayStartDate>
+		<PaymentAmt>${Body.PaymentAmt}</PaymentAmt>
+		<PaymentKey2>${Body.PaymentKey2}</PaymentKey2>
+		<PaymentKey1>${Body.PaymentKey1}</PaymentKey1>
+		<PaymentNo>${Body.PaymentNo}</PaymentNo>
+	</Body>
+	<Head>
+		<TxOperator>${Head.TxOperator}</TxOperator>
+		<TxChannel>${Head.TxChannel}</TxChannel>
+		<TxAgentNo>${Head.TxAgentNo}</TxAgentNo>
+		<TxOrgNo>${Head.TxOrgNo}</TxOrgNo>
+		<TxSerial>${Head.TxSerial}</TxSerial>
+		<TxFrom>${Head.TxFrom}</TxFrom>
+		<TxTime>${Head.TxTime}</TxTime>
+		<TxDate>${Head.TxDate}</TxDate>
+		<TxCode>${Head.TxCode}</TxCode>
+		<TxAgentNo>${Head.TxAgentNo}</TxAgentNo>
+	</Head>
+	<Verify>
+		<MD5>${Verify.MD5}</MD5>
+	</Verify>
+</EJF>
+
+#响应tulip缴费报文格式
+[Tulip_Resp_Pay]
+<EJF>
+	<Head>
+		<ReSerial>${Head.ReSerial}</ReSerial>
+		<ReCode>${Head.ReCode}</ReCode>
+		<ReMess>${Head.ReMess}</ReMess>
+	</Head>
+	<Body>
+		<AgentNo>${Body.AgentNo}</AgentNo>
+		<CustomerNo>${Body.CustomerNo}</CustomerNo>
+		<CustomerName>${Body.CustomerName}</CustomerName>
+		<CustomerPhone>${Body.CustomerPhone}</CustomerPhone>
+		<BalanceAmt>${Body.BalanceAmt}</BalanceAmt>
+		<Note>${Body.Note}</Note>
+		<InfoArea>${Body.InfoArea}</InfoArea>
+	</Body>
+</EJF>
+
+####################tulip config end
+#三方请求查询报文格式
+[Third_Req_Qry]
+A2|25|123456|||${Head.TxOperator}|${Body.PaymentNo};|
+
+#三方响应查询报文格式
+[Third_Resp_Qry]
+A2|00|25|${Body.CustomerNo}|${Body.CustomerName}|.*?|${Body.PaymentAmt}|.*
+
+#三方请求缴费报文格式
+[Third_Req_Pay]
+A4|25|123456|||${Head.TxOperator}|${Body.PaymentNo}|${Head.TxSerial}|${Head.TxDate}|1|1|${Body.PaymentAmt}|0|;|
+
+#三方响应缴费报文格式
+[Third_Resp_Pay]
+A4|00|25|${Head.ReSerial}|${Head.TxOperator}|${Head.TxDate}|${Body.PaymentNo}|${Body.CustomerName}|${Body.CustomerAddr}|${Body.BalanceAmt}|.*
+
+#三方响应错误报文格式
+[Third_Resp_Fail]
+${Head.TxCode}|${Head.ReCode};|
+
+#三方请求对账报文格式
+[Third_Req_Chk]
+A6|25|123456|||TPCT|${Body.FileName}|${Head.TxDate};|
+
+#三方响应对账报文格式
+[Third_Resp_Chk]
+A6|00|25|${Third.FileName}|${Third.TxDate}*
+
 
