--- a/deploy/Soucefiles/config.properties
+++ b/deploy/Soucefiles/config.properties
@@ -55,7 +55,151 @@ com.myabc.ElementEditor.myGasEditor
 [Caller]
 com.myabc.Third.HttpThirdCaller
 [test_qry]
-<test><xx>${xx}</xx><tt>${tt}</tt><TxCode>${TxCode}</TxCode></test>
+<EJF>
+	<Body>
+		<PaymentKey3></PaymentKey3>
+		<PaymentKey2></PaymentKey2>
+		<PaymentKey1></PaymentKey1>
+		<PaymentNo>1212</PaymentNo>
+	</Body>
+	<Head>
+		<TxOperator>44</TxOperator>
+		<TxChannel>44</TxChannel>
+		<TxOrgNo>44</TxOrgNo>
+		<TxSerial>44</TxSerial>
+		<TxAgentNo>44</TxAgentNo>
+		<TxFrom>44</TxFrom>
+		<TxTime>44</TxTime>
+		<TxDate>11</TxDate>
+		<TxCode>01</TxCode>
+	</Head>
+	<Verify>
+		<MD5>m55555555</MD5>
+	</Verify>
+</EJF>
+[test_json]
+{
+  "periods": [
+    {
+      "byys": 322,
+      "ny": "201508",
+      "period": [
+        {
+          "byds": 64,
+          "byyq": 64,
+          "gasFeeId": "38308",
+          "ladderGasFee": [
+            {
+              qbdj: "2.3",
+              qjbh: "1"
+            },
+            {
+              qbdj: "3.4",
+              qjbh: "2"
+            },
+            {
+              qbdj: "4.8",
+              qjbh: "3"
+            }
+          ],
+          "skje": 322,
+          "syds": 0,
+          "yqxz": "居民"
+        },
+        {
+          "byds": 76,
+          "byyq": 76,
+          "gasFeeId": "38308",
+          "ladderGasFee": [
+            {
+              qbdj: "2.3",
+              qjbh: "1"
+            },
+            {
+              qbdj: "3.4",
+              qjbh: "2"
+            },
+            {
+              qbdj: "4.8",
+              qjbh: "3"
+            }
+          ],
+          "skje": 322,
+          "syds": 0,
+          "yqxz": "居民"
+        }
+      ],
+      "qfyskId": "38312"
+    },
+    {
+      "byys": 48.3,
+      "ny": "201509",
+      "period": [
+        {
+          "byds": 23,
+          "byyq": 21,
+          "gasFeeId": "38315",
+          "ladderGasFee": [
+            {
+              qbdj: "2.3",
+              qjbh: "1"
+            },
+            {
+              qbdj: "3.4",
+              qjbh: "2"
+            },
+            {
+              qbdj: "4.8",
+              qjbh: "3"
+            }
+          ],
+          "skje": 48.3,
+          "syds": 2,
+          "yqxz": "居民"
+        }
+      ],
+      "qfyskId": "38319"
+    },
+    {
+      "byys": 142.6,
+      "ny": "201510",
+      "period": [
+        {
+          "byds": 74,
+          "byyq": 62,
+          "gasFeeId": "38322",
+          "ladderGasFee": [
+            {
+              qbdj: "2.3",
+              qjbh: "1"
+            },
+            {
+              qbdj: "3.4",
+              qjbh: "2"
+            },
+            {
+              qbdj: "4.8",
+              qjbh: "3"
+            }
+          ],
+          "skje": 142.6,
+          "syds": 12,
+          "yqxz": "居民"
+        }
+      ],
+      "qfyskId": "38326"
+    }
+  ],
+  "yhbm": "60030000000513",
+  "gsdm": "6003",
+  "yhdz": "黄龙溪镇1005号/黄龙溪/楼栋-3/3单元2203",
+  "yhgy": "0001",
+  "yhmc": "刘小兰",
+  "yhwd": "A网点",
+  "zje": 512.9,
+  "resultCode": "0000",
+  "errInfo": "交易成功"
+}
 ####################tulip报文设置区，若非EJF接口有变，请勿轻易改动
 #tulip请求查询报文格式
 [Tulip_Req_Qry]
@@ -170,8 +314,7 @@ com.myabc.Third.HttpThirdCaller
 ####################tulip config end
 #三方请求查询报文格式
 [Third_Req_Qry]
-A2|25|123456|||${Head.TxOperator}|${Body.PaymentNo};|
-
+{yhwd:"004",yhgy:"0001",gsdm: "7001",yhbm:"${Body.PaymentNo}"}
 #三方响应查询报文格式
 [Third_Resp_Qry]
 A2|00|25|${Body.CustomerNo}|${Body.CustomerName}|.*?|${Body.PaymentAmt}|.*
