--- a/deploy/src/main/java/log4j.properties
+++ b/deploy/src/main/java/log4j.properties
@@ -1,5 +1,5 @@
 ### \u8BBE\u7F6E###
-log4j.rootLogger =info,debug,D,E
+log4j.rootLogger =info,debug,D,E,appender3
 
 log4j.appender.debug = org.apache.log4j.ConsoleAppender
 log4j.appender.debug.Target=System.out
@@ -24,3 +24,8 @@ log4j.appender.E.Threshold = ERROR
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
 log4j.appender.E.Encoding=GBK
 log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ]  %m%n
+# \u6570\u636E\u5E93\u8F93\u51FA 
+log4j.appender.appender3=org.apache.log4j.jdbc.JDBCAppender 
+log4j.appender.appender3.driver=com.mysql.jdbc.Driver 
+log4j.appender.appender3.URL=jdbc:sqlite:F:/work/mydatabase.db
+log4j.appender.appender3.sql=insert into log_myabc(level,category,thread,time,location,note) values('%p','%c','%t','%d{yyyy-MM-dd HH:mm:ss:SSS}','%l','%m') 
